--- a/acl/docker-compose.yml
+++ b/acl/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     <<: *consul-server
 
   consul-server-bootstrap:
-    <<: *consul-agent
+    <<: *consul-server
     command: "agent -server -bootstrap-expect 3 -client 127.0.0.1"
 
 networks:
