--- a/acl/docker-compose.yml
+++ b/acl/docker-compose.yml
@@ -15,6 +15,8 @@ services:
 
   consul-agent-ui:
     <<: *consul-agent
+    volumes:
+      - ./config/ui:/consul/config
     command: "agent -retry-join consul-server-bootstrap -client 0.0.0.0 -ui"
     ports:
       - "8400:8400"
